--- a/makeMyTrip/test-output/old/Suite/methods-alphabetical.html
+++ b/makeMyTrip/test-output/old/Suite/methods-alphabetical.html
@@ -1,12 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="97c064">  <td>19/09/08 19:38:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testCase4.accountRegistration()[pri:0, instance:travelSite.testCase4@27efef64]">accountRegistration</td> 
-  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="69717b">  <td>19/09/08 19:37:14</td>   <td>-58159</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testCase1.launchGooglePage()[pri:0, instance:travelSite.testCase1@3532ec19]">launchGooglePage</td> 
-  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="c7c2a6">  <td>19/09/08 19:37:35</td>   <td>-37482</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testCase2.launchMMT()[pri:0, instance:travelSite.testCase2@59f99ea]">launchMMT</td> 
-  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="90c9c3">  <td>19/09/08 19:38:54</td>   <td>41566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testCase5.login()[pri:0, instance:travelSite.testCase5@6f7fd0e6]">login</td> 
-  <td>main@422250493</td>   <td></td> </tr>
+<tr bgcolor="82f6ef">  <td>20/06/23 00:59:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testCase5.search()[pri:0, instance:testCases.testCase5@77cd7a0]">search</td> 
+  <td>main@1900164709</td>   <td></td> </tr>
 </table>
