changes to test case 1 - 04/07

--- a/makeMyTrip/test-output/index.html
+++ b/makeMyTrip/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Biswajeet Nayak\AppData\Local\Temp\testng-eclipse-277960756\testng-customsuite.xml</span>
+                    <span>C:\Users\Biswajeet Nayak\AppData\Local\Temp\testng-eclipse--459565945\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">8 methods,   8 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,42 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testCases.testCase1" hash-for-method="launchGooglePage">launchGooglePage</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testCases.testCase2" hash-for-method="navigateToBus">navigateToBus</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testCases.testCase2" hash-for-method="navigateToCabs">navigateToCabs</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testCases.testCase2" hash-for-method="navigateToFlight">navigateToFlight</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testCases.testCase2" hash-for-method="navigateToHolidays">navigateToHolidays</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testCases.testCase2" hash-for-method="navigateToHotels">navigateToHotels</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testCases.testCase2" hash-for-method="navigateToTrains">navigateToTrains</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testCases.testCase2" hash-for-method="navigateToVillas">navigateToVillas</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testCases.testCase2" hash-for-method="navigateVisas">navigateVisas</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +155,63 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testCases.testCase1</span>
+              <span class="class-name">testCases.testCase2</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="launchGooglePage">
-                  </a> <!-- launchGooglePage -->
-                  <span class="method-name">launchGooglePage</span>
+                  <a name="navigateToBus">
+                  </a> <!-- navigateToBus -->
+                  <span class="method-name">navigateToBus</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="navigateToCabs">
+                  </a> <!-- navigateToCabs -->
+                  <span class="method-name">navigateToCabs</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="navigateToFlight">
+                  </a> <!-- navigateToFlight -->
+                  <span class="method-name">navigateToFlight</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="navigateToHolidays">
+                  </a> <!-- navigateToHolidays -->
+                  <span class="method-name">navigateToHolidays</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="navigateToHotels">
+                  </a> <!-- navigateToHotels -->
+                  <span class="method-name">navigateToHotels</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="navigateToTrains">
+                  </a> <!-- navigateToTrains -->
+                  <span class="method-name">navigateToTrains</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="navigateToVillas">
+                  </a> <!-- navigateToVillas -->
+                  <span class="method-name">navigateToVillas</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="navigateVisas">
+                  </a> <!-- navigateVisas -->
+                  <span class="method-name">navigateVisas</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +219,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Biswajeet Nayak\AppData\Local\Temp\testng-eclipse-277960756\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Biswajeet Nayak\AppData\Local\Temp\testng-eclipse--459565945\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +228,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testCases.testCase1&quot;/&gt;
+      &lt;class name=&quot;testCases.testCase2&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -184,16 +268,44 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(8);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'launchGooglePage')
-data.setCell(0, 2, 'testCases.testCase1')
-data.setCell(0, 3, 27257);
+data.setCell(0, 1, 'navigateVisas')
+data.setCell(0, 2, 'testCases.testCase2')
+data.setCell(0, 3, 962);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'navigateToFlight')
+data.setCell(1, 2, 'testCases.testCase2')
+data.setCell(1, 3, 814);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'navigateToHolidays')
+data.setCell(2, 2, 'testCases.testCase2')
+data.setCell(2, 3, 753);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'navigateToTrains')
+data.setCell(3, 2, 'testCases.testCase2')
+data.setCell(3, 3, 705);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'navigateToVillas')
+data.setCell(4, 2, 'testCases.testCase2')
+data.setCell(4, 3, 666);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'navigateToCabs')
+data.setCell(5, 2, 'testCases.testCase2')
+data.setCell(5, 3, 404);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'navigateToBus')
+data.setCell(6, 2, 'testCases.testCase2')
+data.setCell(6, 3, 363);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'navigateToHotels')
+data.setCell(7, 2, 'testCases.testCase2')
+data.setCell(7, 3, 343);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 27 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,11 +331,47 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testCases.testCase1</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">launchGooglePage</span>
+              <div class="chronological-class-name">testCases.testCase2</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">launchMMT</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- configuration-test before -->
+              <div class="test-method">
+                <span class="method-name">navigateToHolidays</span>
+                <span class="method-start">49601 ms</span>
               </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">navigateToTrains</span>
+                <span class="method-start">50362 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">navigateVisas</span>
+                <span class="method-start">51071 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">navigateToFlight</span>
+                <span class="method-start">52035 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">navigateToVillas</span>
+                <span class="method-start">52851 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">navigateToCabs</span>
+                <span class="method-start">53520 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">navigateToBus</span>
+                <span class="method-start">53925 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">navigateToHotels</span>
+                <span class="method-start">54295 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-test after">
+                <span class="method-name">endOfTestCase</span>
+                <span class="method-start">54640 ms</span>
+              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
