--- a/makeMyTrip/test-output/old/Default suite/classes.html
+++ b/makeMyTrip/test-output/old/Default suite/classes.html
@@ -4,14 +4,42 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testCases.testCase1</td>
+<td>testCases.testCase2</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>launchGooglePage</td>
+<td>navigateToFlight</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>navigateToVillas</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>navigateToBus</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>navigateToTrains</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>navigateToCabs</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>navigateToHolidays</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>navigateVisas</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>navigateToHotels</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
