--- a/makeMyTrip/test-output/emailable-report.html
+++ b/makeMyTrip/test-output/emailable-report.html
@@ -9,10 +9,17 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">27,325</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">8</td><td class="num">0</td><td class="num">0</td><td class="num">54,646</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.testCase1</td><td><a href="#m0">launchGooglePage</a></td><td rowspan="1">1593714413667</td><td rowspan="1">27257</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="8">testCases.testCase2</td><td><a href="#m0">navigateToBus</a></td><td rowspan="1">1593802354668</td><td rowspan="1">363</td></tr><tr class="passedeven"><td><a href="#m1">navigateToCabs</a></td><td rowspan="1">1593802354263</td><td rowspan="1">404</td></tr><tr class="passedeven"><td><a href="#m2">navigateToFlight</a></td><td rowspan="1">1593802352778</td><td rowspan="1">814</td></tr><tr class="passedeven"><td><a href="#m3">navigateToHolidays</a></td><td rowspan="1">1593802350344</td><td rowspan="1">753</td></tr><tr class="passedeven"><td><a href="#m4">navigateToHotels</a></td><td rowspan="1">1593802355038</td><td rowspan="1">343</td></tr><tr class="passedeven"><td><a href="#m5">navigateToTrains</a></td><td rowspan="1">1593802351105</td><td rowspan="1">705</td></tr><tr class="passedeven"><td><a href="#m6">navigateToVillas</a></td><td rowspan="1">1593802353594</td><td rowspan="1">666</td></tr><tr class="passedeven"><td><a href="#m7">navigateVisas</a></td><td rowspan="1">1593802351814</td><td rowspan="1">962</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">testCases.testCase1#launchGooglePage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">testCases.testCase2#navigateToBus</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testCases.testCase2#navigateToCabs</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">testCases.testCase2#navigateToFlight</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">testCases.testCase2#navigateToHolidays</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">testCases.testCase2#navigateToHotels</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">testCases.testCase2#navigateToTrains</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">testCases.testCase2#navigateToVillas</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">testCases.testCase2#navigateVisas</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
