--- a/makeMyTrip/test-output/old/Default suite/methods.html
+++ b/makeMyTrip/test-output/old/Default suite/methods.html
@@ -1,6 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="82f6ef">  <td>20/07/02 23:56:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testCase1.launchGooglePage()[pri:0, instance:testCases.testCase1@77cd7a0]">launchGooglePage</td> 
-  <td>main@1900164709</td>   <td></td> </tr>
+<tr bgcolor="82f6ef">  <td>20/07/04 00:21:40</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;testCase2.launchMMT()[pri:0, instance:testCases.testCase2@3c0ecd4b]">&gt;&gt;launchMMT</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@858242339</td>   <td></td> </tr>
+<tr bgcolor="82f6ef">  <td>20/07/04 00:22:30</td>   <td>49593</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testCase2.navigateToHolidays()[pri:-1, instance:testCases.testCase2@3c0ecd4b]">navigateToHolidays</td> 
+  <td>main@858242339</td>   <td></td> </tr>
+<tr bgcolor="82f6ef">  <td>20/07/04 00:22:31</td>   <td>50354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testCase2.navigateToTrains()[pri:0, instance:testCases.testCase2@3c0ecd4b]">navigateToTrains</td> 
+  <td>main@858242339</td>   <td></td> </tr>
+<tr bgcolor="82f6ef">  <td>20/07/04 00:22:31</td>   <td>51063</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testCase2.navigateVisas()[pri:0, instance:testCases.testCase2@3c0ecd4b]">navigateVisas</td> 
+  <td>main@858242339</td>   <td></td> </tr>
+<tr bgcolor="82f6ef">  <td>20/07/04 00:22:32</td>   <td>52027</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testCase2.navigateToFlight()[pri:1, instance:testCases.testCase2@3c0ecd4b]">navigateToFlight</td> 
+  <td>main@858242339</td>   <td></td> </tr>
+<tr bgcolor="82f6ef">  <td>20/07/04 00:22:33</td>   <td>52843</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testCase2.navigateToVillas()[pri:1, instance:testCases.testCase2@3c0ecd4b]">navigateToVillas</td> 
+  <td>main@858242339</td>   <td></td> </tr>
+<tr bgcolor="82f6ef">  <td>20/07/04 00:22:34</td>   <td>53512</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testCase2.navigateToCabs()[pri:2, instance:testCases.testCase2@3c0ecd4b]">navigateToCabs</td> 
+  <td>main@858242339</td>   <td></td> </tr>
+<tr bgcolor="82f6ef">  <td>20/07/04 00:22:34</td>   <td>53917</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testCase2.navigateToBus()[pri:3, instance:testCases.testCase2@3c0ecd4b]">navigateToBus</td> 
+  <td>main@858242339</td>   <td></td> </tr>
+<tr bgcolor="82f6ef">  <td>20/07/04 00:22:35</td>   <td>54285</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testCase2.navigateToHotels()[pri:4, instance:testCases.testCase2@3c0ecd4b]">navigateToHotels</td> 
+  <td>main@858242339</td>   <td></td> </tr>
+<tr bgcolor="82f6ef">  <td>20/07/04 00:22:35</td>   <td>54632</td> <td>&nbsp;</td><td title="&lt;&lt;testCase2.endOfTestCase()[pri:0, instance:testCases.testCase2@3c0ecd4b]">&lt;&lt;endOfTestCase</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@858242339</td>   <td></td> </tr>
 </table>
