--- a/makeMyTrip/test-output/emailable-report.html
+++ b/makeMyTrip/test-output/emailable-report.html
@@ -9,13 +9,40 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">8</td><td class="num">0</td><td class="num">0</td><td class="num">54,646</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">7</td><td class="num attn">1</td><td class="num">0</td><td class="num">27,386</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="8">testCases.testCase2</td><td><a href="#m0">navigateToBus</a></td><td rowspan="1">1593802354668</td><td rowspan="1">363</td></tr><tr class="passedeven"><td><a href="#m1">navigateToCabs</a></td><td rowspan="1">1593802354263</td><td rowspan="1">404</td></tr><tr class="passedeven"><td><a href="#m2">navigateToFlight</a></td><td rowspan="1">1593802352778</td><td rowspan="1">814</td></tr><tr class="passedeven"><td><a href="#m3">navigateToHolidays</a></td><td rowspan="1">1593802350344</td><td rowspan="1">753</td></tr><tr class="passedeven"><td><a href="#m4">navigateToHotels</a></td><td rowspan="1">1593802355038</td><td rowspan="1">343</td></tr><tr class="passedeven"><td><a href="#m5">navigateToTrains</a></td><td rowspan="1">1593802351105</td><td rowspan="1">705</td></tr><tr class="passedeven"><td><a href="#m6">navigateToVillas</a></td><td rowspan="1">1593802353594</td><td rowspan="1">666</td></tr><tr class="passedeven"><td><a href="#m7">navigateVisas</a></td><td rowspan="1">1593802351814</td><td rowspan="1">962</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">testCases.testCase2</td><td><a href="#m0">navigateToFlight</a></td><td rowspan="1">1593874180913</td><td rowspan="1">568</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="7">testCases.testCase2</td><td><a href="#m1">navigateToBus</a></td><td rowspan="1">1593874182809</td><td rowspan="1">481</td></tr><tr class="passedeven"><td><a href="#m2">navigateToCabs</a></td><td rowspan="1">1593874181868</td><td rowspan="1">939</td></tr><tr class="passedeven"><td><a href="#m3">navigateToHolidays</a></td><td rowspan="1">1593874174529</td><td rowspan="1">4645</td></tr><tr class="passedeven"><td><a href="#m4">navigateToHotels</a></td><td rowspan="1">1593874183292</td><td rowspan="1">333</td></tr><tr class="passedeven"><td><a href="#m5">navigateToTrains</a></td><td rowspan="1">1593874179179</td><td rowspan="1">1178</td></tr><tr class="passedeven"><td><a href="#m6">navigateToVillas</a></td><td rowspan="1">1593874181483</td><td rowspan="1">382</td></tr><tr class="passedeven"><td><a href="#m7">navigateVisas</a></td><td rowspan="1">1593874180359</td><td rowspan="1">553</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">testCases.testCase2#navigateToBus</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testCases.testCase2#navigateToCabs</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">testCases.testCase2#navigateToFlight</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">testCases.testCase2#navigateToFlight</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.SkipException: This test has been skipped
+	at testCases.testCase2.navigateToFlight(testCase2.java:41)
+	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
+	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.lang.reflect.Method.invoke(Method.java:498)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:124)
+	at org.testng.internal.Invoker.invokeMethod(Invoker.java:580)
+	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:716)
+	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:988)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:125)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
+	at org.testng.TestRunner.privateRun(TestRunner.java:648)
+	at org.testng.TestRunner.run(TestRunner.java:505)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:455)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:450)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:415)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:364)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:84)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1208)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1137)
+	at org.testng.TestNG.runSuites(TestNG.java:1049)
+	at org.testng.TestNG.run(TestNG.java:1017)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:114)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testCases.testCase2#navigateToBus</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">testCases.testCase2#navigateToCabs</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m3">testCases.testCase2#navigateToHolidays</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m4">testCases.testCase2#navigateToHotels</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m5">testCases.testCase2#navigateToTrains</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
