--- a/makeMyTrip/test-output/index.html
+++ b/makeMyTrip/test-output/index.html
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Default_suite">
-              <span class="suite-name border-passed">Default suite</span>
+              <span class="suite-name border-skipped">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Biswajeet Nayak\AppData\Local\Temp\testng-eclipse--459565945\testng-customsuite.xml</span>
+                    <span>C:\Users\Biswajeet Nayak\AppData\Local\Temp\testng-eclipse--1991105315\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">8 methods,   8 passed</span>
+                    <span class="method-stats">8 methods,  1 skipped,  7 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title skipped">Skipped methods</span>
+                    <span class="show-or-hide-methods skipped">
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods skipped suite-Default_suite"> (hide)</a> <!-- hide-methods skipped suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods skipped suite-Default_suite"> (show)</a> <!-- show-methods skipped suite-Default_suite -->
+                    </span>
+                    <div class="method-list-content skipped suite-Default_suite">
+                      <span>
+                        <img width="3%" src="skipped.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testCases.testCase2" hash-for-method="navigateToFlight">navigateToFlight</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content skipped suite-Default_suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -108,11 +122,6 @@
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testCases.testCase2" hash-for-method="navigateToCabs">navigateToCabs</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testCases.testCase2" hash-for-method="navigateToFlight">navigateToFlight</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -152,6 +161,50 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
+          <div class="suite-Default_suite-class-skipped">
+            <div class="main-panel-header rounded-window-top">
+              <img src="skipped.png"/>
+              <span class="class-name">testCases.testCase2</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="navigateToFlight">
+                  </a> <!-- navigateToFlight -->
+                  <span class="method-name">navigateToFlight</span>
+                  <div class="stack-trace">org.testng.SkipException: This test has been skipped
+	at testCases.testCase2.navigateToFlight(testCase2.java:41)
+	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
+	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.lang.reflect.Method.invoke(Method.java:498)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:124)
+	at org.testng.internal.Invoker.invokeMethod(Invoker.java:580)
+	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:716)
+	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:988)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:125)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
+	at org.testng.TestRunner.privateRun(TestRunner.java:648)
+	at org.testng.TestRunner.run(TestRunner.java:505)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:455)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:450)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:415)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:364)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:84)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1208)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1137)
+	at org.testng.TestNG.runSuites(TestNG.java:1049)
+	at org.testng.TestNG.run(TestNG.java:1017)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:114)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
+
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Default_suite-class-skipped -->
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -170,13 +223,6 @@
                   <a name="navigateToCabs">
                   </a> <!-- navigateToCabs -->
                   <span class="method-name">navigateToCabs</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="navigateToFlight">
-                  </a> <!-- navigateToFlight -->
-                  <span class="method-name">navigateToFlight</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -219,7 +265,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Biswajeet Nayak\AppData\Local\Temp\testng-eclipse--459565945\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Biswajeet Nayak\AppData\Local\Temp\testng-eclipse--1991105315\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -270,42 +316,42 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(8);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'navigateVisas')
+data.setCell(0, 1, 'navigateToHolidays')
 data.setCell(0, 2, 'testCases.testCase2')
-data.setCell(0, 3, 962);
+data.setCell(0, 3, 4645);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'navigateToFlight')
+data.setCell(1, 1, 'navigateToTrains')
 data.setCell(1, 2, 'testCases.testCase2')
-data.setCell(1, 3, 814);
+data.setCell(1, 3, 1178);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'navigateToHolidays')
+data.setCell(2, 1, 'navigateToCabs')
 data.setCell(2, 2, 'testCases.testCase2')
-data.setCell(2, 3, 753);
+data.setCell(2, 3, 939);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'navigateToTrains')
+data.setCell(3, 1, 'navigateToFlight')
 data.setCell(3, 2, 'testCases.testCase2')
-data.setCell(3, 3, 705);
+data.setCell(3, 3, 568);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'navigateToVillas')
+data.setCell(4, 1, 'navigateVisas')
 data.setCell(4, 2, 'testCases.testCase2')
-data.setCell(4, 3, 666);
+data.setCell(4, 3, 553);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'navigateToCabs')
+data.setCell(5, 1, 'navigateToBus')
 data.setCell(5, 2, 'testCases.testCase2')
-data.setCell(5, 3, 404);
+data.setCell(5, 3, 481);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'navigateToBus')
+data.setCell(6, 1, 'navigateToVillas')
 data.setCell(6, 2, 'testCases.testCase2')
-data.setCell(6, 3, 363);
+data.setCell(6, 3, 382);
 data.setCell(7, 0, 7)
 data.setCell(7, 1, 'navigateToHotels')
 data.setCell(7, 2, 'testCases.testCase2')
-data.setCell(7, 3, 343);
+data.setCell(7, 3, 333);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -338,40 +384,36 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">navigateToHolidays</span>
-                <span class="method-start">49601 ms</span>
+                <span class="method-start">18283 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">navigateToTrains</span>
-                <span class="method-start">50362 ms</span>
+                <span class="method-start">22933 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">navigateVisas</span>
-                <span class="method-start">51071 ms</span>
+                <span class="method-start">24113 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">navigateToFlight</span>
-                <span class="method-start">52035 ms</span>
+                <span class="method-start">24667 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">navigateToVillas</span>
-                <span class="method-start">52851 ms</span>
+                <span class="method-start">25237 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">navigateToCabs</span>
-                <span class="method-start">53520 ms</span>
+                <span class="method-start">25622 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">navigateToBus</span>
-                <span class="method-start">53925 ms</span>
+                <span class="method-start">26563 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">navigateToHotels</span>
-                <span class="method-start">54295 ms</span>
+                <span class="method-start">27046 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-test after">
-                <span class="method-name">endOfTestCase</span>
-                <span class="method-start">54640 ms</span>
-              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
